Add realease build configuration

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=inforomait.jks
+MYAPP_RELEASE_KEY_ALIAS=AndroidWebView
+MYAPP_RELEASE_STORE_PASSWORD=StefAle2009
+MYAPP_RELEASE_KEY_PASSWORD=U5oE3r4r3VnSVMfJ
