--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,3 +23,5 @@ MYAPP_RELEASE_STORE_FILE=inforomait.jks
 MYAPP_RELEASE_KEY_ALIAS=AndroidWebView
 MYAPP_RELEASE_STORE_PASSWORD=StefAle2009
 MYAPP_RELEASE_KEY_PASSWORD=U5oE3r4r3VnSVMfJ
+
+org.gradle.jvmargs=-Xmx1536M
